--- a/PalCine/Base.lproj/Main.storyboard
+++ b/PalCine/Base.lproj/Main.storyboard
@@ -391,6 +391,8 @@
                         <outlet property="ratingLBL" destination="O8c-A8-csd" id="EQH-fC-epa"/>
                         <outlet property="ratingStackView" destination="fr3-qH-kDh" id="ATk-iU-9Dq"/>
                         <outlet property="releaseDateLBL" destination="Yeh-hQ-Oqh" id="x58-eu-OEF"/>
+                        <outlet property="releaseDateStackView" destination="gyX-dW-Uhu" id="422-Jl-o4N"/>
+                        <outlet property="releaseDateTextLBL" destination="roQ-xD-ACg" id="ON1-fP-7TD"/>
                         <outlet property="titleBgView" destination="SAv-1f-cfQ" id="nbT-Kl-NmF"/>
                         <outlet property="titleLBL" destination="V4s-9Y-W0a" id="O6C-cw-BU7"/>
                         <outlet property="watchTrailerBTN" destination="Jpo-5G-g5V" id="BdQ-NV-ifW"/>
