added: trailer button default value

--- a/PalCine/Base.lproj/Main.storyboard
+++ b/PalCine/Base.lproj/Main.storyboard
@@ -329,6 +329,7 @@
                                             <constraint firstItem="wbW-cw-8mz" firstAttribute="top" secondItem="SAv-1f-cfQ" secondAttribute="top" constant="20" id="3Pz-Qd-nGw"/>
                                             <constraint firstAttribute="trailing" secondItem="Ip0-tp-AXe" secondAttribute="trailing" constant="8" id="5mT-UJ-S3g"/>
                                             <constraint firstItem="V4s-9Y-W0a" firstAttribute="top" secondItem="SAv-1f-cfQ" secondAttribute="bottom" constant="8" id="AHz-2A-el1"/>
+                                            <constraint firstItem="Yme-Qd-hkJ" firstAttribute="top" secondItem="fr3-qH-kDh" secondAttribute="bottom" constant="15" id="Akh-0M-hSH"/>
                                             <constraint firstItem="roQ-xD-ACg" firstAttribute="leading" secondItem="fr3-qH-kDh" secondAttribute="trailing" constant="10.5" id="CNL-kQ-MiW"/>
                                             <constraint firstAttribute="trailing" secondItem="s3A-9s-QTP" secondAttribute="trailing" id="EkN-L0-ZkA"/>
                                             <constraint firstAttribute="trailing" secondItem="Yme-Qd-hkJ" secondAttribute="trailing" constant="8" id="GsK-Cr-vzK"/>
@@ -343,7 +344,6 @@
                                             <constraint firstItem="SAv-1f-cfQ" firstAttribute="top" secondItem="Q8I-0O-AJH" secondAttribute="top" constant="138" id="VCJ-MY-NcD"/>
                                             <constraint firstItem="feH-xb-FpI" firstAttribute="leading" secondItem="Q8I-0O-AJH" secondAttribute="leading" constant="8" id="YX1-wa-1Oo"/>
                                             <constraint firstItem="8RB-n6-7BY" firstAttribute="top" secondItem="wbW-cw-8mz" secondAttribute="bottom" constant="40" id="dn5-07-8dO"/>
-                                            <constraint firstItem="Yme-Qd-hkJ" firstAttribute="top" secondItem="Jpo-5G-g5V" secondAttribute="bottom" constant="8" id="fWL-3R-Lk0"/>
                                             <constraint firstAttribute="trailing" secondItem="V4s-9Y-W0a" secondAttribute="trailing" constant="8" id="jDf-ug-djO"/>
                                             <constraint firstItem="wbW-cw-8mz" firstAttribute="leading" secondItem="Q8I-0O-AJH" secondAttribute="leading" constant="8" id="jeM-RP-Pka"/>
                                             <constraint firstItem="fr3-qH-kDh" firstAttribute="top" secondItem="V4s-9Y-W0a" secondAttribute="bottom" constant="4.5" id="k33-ks-8tv"/>
